Bug 326472 - Crash in MacroNavigationContext destructor.
Summary: Crash in MacroNavigationContext destructor.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.60
Platform: Ubuntu Linux
: VHI crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-10-23 01:15 UTC by bungeman
Modified: 2013-10-28 10:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (12.19 KB, text/plain)
2013-10-24 11:37 UTC, Lukas Jirkovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bungeman 2013-10-23 01:15:09 UTC
Application: kdevelop (4.5.60)
KDE Platform Version: 4.11.2
Qt Version: 4.8.4
Operating System: Linux 3.11.0-12-generic x86_64
Distribution: Ubuntu 13.10

-- Information about the crash:
- What I was doing when the application crashed:

Built kdevelop from git master at  218a87974d3a. Opened kdevelop project with cpp file open at startup. Once the file was parsed (showed up syntax hilighted) hovered over a macro (at its definition). The widget showing the macro information displays for a split second, and then kdevelop crashes. Commenting out line 99 of macronavigationcontext.cpp (delete m_widget) causes kdevelop to no longer crash in this situation (though probably causes a leak).  Perhaps the widget has already been destroyed elsewhere?

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f53e706b7c0 (LWP 5487))]

Thread 15 (Thread 0x7f53c6e5a700 (LWP 5488)):
#0  0x00007f53e37e5f7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f53ddb33694 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb33afa in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53ce0509d6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f53ddb580e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f53e2b4ff6e in start_thread (arg=0x7f53c6e5a700) at pthread_create.c:311
#6  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 14 (Thread 0x7f53bd693700 (LWP 5499)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53dff0706b in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f53dff070a9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f53e2b4ff6e in start_thread (arg=0x7f53bd693700) at pthread_create.c:311
#4  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 13 (Thread 0x7f5337981700 (LWP 5500)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007f53e4af13e4 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f53e0bccc4a in KDevelop::DUChainPrivate::CleanupThread::run (this=0x329dbe0) at ../language/duchain/duchain.cpp:285
#3  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f53e2b4ff6e in start_thread (arg=0x7f5337981700) at pthread_create.c:311
#5  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 12 (Thread 0x7f5326b09700 (LWP 5501)):
#0  0x00007f53e37e5f7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f53ddb33694 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e2b4ff6e in start_thread (arg=0x7f5326b09700) at pthread_create.c:311
#9  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 11 (Thread 0x7f531ffff700 (LWP 5504)):
#0  0x00007f53e2b5305f in __pthread_mutex_unlock_usercnt (mutex=0x7f5314000a80, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  0x00007f53ddb733c1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb3354d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e2b4ff6e in start_thread (arg=0x7f531ffff700) at pthread_create.c:311
#10 0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 10 (Thread 0x7f531f7fe700 (LWP 5505)):
#0  0x00007f53ddb730d6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f53ddb73389 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb3311c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53ddb3362b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f53e2b4ff6e in start_thread (arg=0x7f531f7fe700) at pthread_create.c:311
#11 0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 9 (Thread 0x7f53059a1700 (LWP 5523)):
#0  0x00007f53ddb730da in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f53ddb733b9 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb32dc8 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53ddb335b3 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e4bd0d13 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#11 0x00007f53e2b4ff6e in start_thread (arg=0x7f53059a1700) at pthread_create.c:311
#12 0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 8 (Thread 0x7f53061a2700 (LWP 5531)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53e4af1406 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f53db631e6c in ?? () from /usr/lib/libthreadweaver.so.4
#3  0x00007f53db634903 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0x00007f53db63491c in ?? () from /usr/lib/libthreadweaver.so.4
#5  0x00007f53db63361f in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#6  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e2b4ff6e in start_thread (arg=0x7f53061a2700) at pthread_create.c:311
#8  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 7 (Thread 0x7f53051a0700 (LWP 5532)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53e4af1406 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f53db631e6c in ?? () from /usr/lib/libthreadweaver.so.4
#3  0x00007f53db634903 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0x00007f53db63361f in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#5  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e2b4ff6e in start_thread (arg=0x7f53051a0700) at pthread_create.c:311
#7  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 6 (Thread 0x7f530499f700 (LWP 5539)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53da8d71cd in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f53da8d7209 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f53e2b4ff6e in start_thread (arg=0x7f530499f700) at pthread_create.c:311
#4  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 5 (Thread 0x7f52b7ffd700 (LWP 5540)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53da617bbd in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f53da906a76 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f53e2b4ff6e in start_thread (arg=0x7f52b7ffd700) at pthread_create.c:311
#4  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 4 (Thread 0x7f52b73fc700 (LWP 5543)):
#0  0x00007f53ddb730d2 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f53ddb733b9 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb32d30 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53ddb335b3 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f53e2b4ff6e in start_thread (arg=0x7f52b73fc700) at pthread_create.c:311
#11 0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f52b67be700 (LWP 5546)):
#0  0x00007f53e37e5f7d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f53ddb33694 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f53e4c1da76 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e4aee88f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f53e4bd0d13 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e2b4ff6e in start_thread (arg=0x7f52b67be700) at pthread_create.c:311
#10 0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f52b5fbd700 (LWP 5547)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f53e4af1406 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f53db631e6c in ?? () from /usr/lib/libthreadweaver.so.4
#3  0x00007f53db634903 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0x00007f53db63361f in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#5  0x00007f53e4af0f2f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f53e2b4ff6e in start_thread (arg=0x7f52b5fbd700) at pthread_create.c:311
#7  0x00007f53e37f29cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f53e706b7c0 (LWP 5487)):
[KCrash Handler]
#5  0x0000000000000020 in ?? ()
#6  0x00007f5324691afd in Cpp::MacroNavigationContext::~MacroNavigationContext (this=0x83c54a0, __in_chrg=<optimized out>) at ../languages/cpp/cppduchain/navigation/macronavigationcontext.cpp:99
#7  0x00007f5324691b49 in Cpp::MacroNavigationContext::~MacroNavigationContext (this=0x83c54a0, __in_chrg=<optimized out>) at ../languages/cpp/cppduchain/navigation/macronavigationcontext.cpp:101
#8  0x00007f53e4c08e08 in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f53e3f8ddfc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#10 0x00007f53e3f94470 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#11 0x00007f53e53f3a6a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#12 0x00007f53e4bf08bd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#13 0x00007f53e4bf3e1f in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007f53e4c1e073 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#15 0x00007f53ddb333a6 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#16 0x00007f53ddb336f8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007f53ddb3379c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007f53e4c1da55 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#19 0x00007f53e402f9d6 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#20 0x00007f53e4bef5ef in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#21 0x00007f53e4bef8e5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#22 0x00007f53e4bf4e5b in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x000000000040f2b8 in main (argc=<optimized out>, argv=<optimized out>) at ../app/main.cpp:566

Reported using DrKonqi
Comment 1 Lukas Jirkovsky 2013-10-24 11:37:55 UTC
Created attachment 83079 [details]
New crash information added by DrKonqi

kdevelop (4.5.60) on KDE Platform 4.11.2 using Qt 4.8.5

- What I was doing when the application crashed:
I didn't do much. I've opened a file, renamed a function, started compile to find out where it is used and bam, kdevelop crashed.

-- Backtrace (Reduced):
#6  0x00007f386bdcaecf in Cpp::MacroNavigationContext::~MacroNavigationContext (this=0x8094290, __in_chrg=<optimized out>) at /var/abs/local/NOTAUR/kdevelop-git/src/kdevelop/languages/cpp/cppduchain/navigation/macronavigationcontext.cpp:99
#7  0x00007f386bdcb1c9 in Cpp::MacroNavigationContext::~MacroNavigationContext (this=0x8094290, __in_chrg=<optimized out>) at /var/abs/local/NOTAUR/kdevelop-git/src/kdevelop/languages/cpp/cppduchain/navigation/macronavigationcontext.cpp:101
#8  0x00007f3979abef38 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#9  0x00007f3978e4b12c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#10 0x00007f3978e516f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
Comment 2 Milian Wolff 2013-10-24 12:35:47 UTC
This seems to be new and more and more people hit it. We should investigate.

Guys, can you make sure that you properly rebuild everything after the recent API changes in kdevplatform? Not that this is some strange bug due to BIC?
Comment 3 Lukas Jirkovsky 2013-10-24 13:21:43 UTC
I did a completely fresh build today, including the git clone. I have been able to hit it every time I hover over assert() macro.
Comment 4 Aleix Pol 2013-10-24 14:25:06 UTC
I have it as well, I've been investigating and the bug is because AbstractNavigationContext is now  a QObject and KSharedObject, trying to figure out what's the exact problem.
Comment 5 Aleix Pol 2013-10-24 15:58:12 UTC
Git commit a8859089ddac283ef0a3b2d886609cc4705e87ff by Aleix Pol.
Committed on 24/10/2013 at 15:53.
Pushed by apol into branch 'master'.

Make the AbstractNavigationContext a KShared instead of KSharedObject

Fixes crash when hovering a preprocessor macro, the tooltip destruction
would crash.

M  +1    -2    language/duchain/navigation/abstractnavigationcontext.cpp
M  +1    -1    language/duchain/navigation/abstractnavigationcontext.h

http://commits.kde.org/kdevplatform/a8859089ddac283ef0a3b2d886609cc4705e87ff
Comment 6 Christophe Marin 2013-10-28 10:48:22 UTC
Aleix: The fix seems to break the kdev-control-flow-graph build

Check eg https://build.opensuse.org/package/live_build_log/KDE:Unstable:Extra/kdevelop4-plugin-control-flow-graph/openSUSE_Factory_KDE_Distro_Factory/x86_64