Make the AbstractNavigationContext a KShared instead of KSharedObject

Fixes crash when hovering a preprocessor macro, the tooltip destruction
would crash.

BUG: 326472